# liasse

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SPEC-ISSUES.md  SPEC.md
crates/liasse/: Cargo.toml
crates/liasse-artifact/: Cargo.toml
crates/liasse-artifact/benches/: artifact_bench.rs
crates/liasse-artifact/src/: archive.rs  artifact.rs  build.rs  canon.rs  compat.rs  error.rs  lib.rs  raw.rs  version.rs
crates/liasse-artifact/tests/: compat.rs  manifest.rs  modules.rs  redteam_role_path_decoy.rs  roundtrip.rs  verify.rs  zip64.rs
crates/liasse-blob-fs/: Cargo.toml
crates/liasse-blob-fs/src/: lib.rs  store.rs
crates/liasse-blob-fs/tests/: connector.rs
crates/liasse-connect/: Cargo.toml
crates/liasse-connect-wasm/: Cargo.toml
crates/liasse-connect-wasm/src/: error.rs  lib.rs  replica.rs  request.rs  wasm.rs
crates/liasse-connect-wasm/tests/: core.rs  wasm.rs
crates/liasse-connect/src/: decode.rs  encode.rs  error.rs  lib.rs  mount.rs  token.rs
crates/liasse-connect/tests/: authz.rs  coherence.rs  cookie.rs  ephemeral.rs  idempotent.rs  invariants.rs  native_cose.rs  owning_driver_composition.rs  redteam_backpressure.rs  redteam_capability_leak.rs  redteam_confinement.rs  redteam_enum_oracle_anon_role.rs  redteam_enum_oracle_argshape.rs  redteam_frames.rs  redteam_noncanonical_wire.rs  redteam_view_enum_oracle.rs  resume.rs  socket.rs  windows.rs
crates/liasse-expr/: Cargo.toml
crates/liasse-expr/benches/: expr_bench.rs
crates/liasse-expr/src/: env.rs  error.rs  hoist.rs  host.rs  lib.rs  lower.rs  order.rs  scope.rs  semantics.rs  ty.rs  typed.rs  wire.rs
crates/liasse-expr/tests/: arithmetic.rs  avg_significant_scale.rs  blob.rs  blob_placement.rs  combinator_precedence.rs  config.rs  decimal_division_significant_scale.rs  host_calls.rs  identity.rs  key_selector.rs  keyring.rs  meters.rs  purity.rs  redteam_aggregates.rs  redteam_combine.rs  redteam_composite_ref.rs  redteam_division_scale_bound.rs  redteam_grouped_key_cross_reference.rs  redteam_in.rs  redteam_nested_aggregate_and_combine.rs  redteam_w3_ancestor_bind_probe.rs  redteam_w3_grouped_key_group_reference.rs  temporal.rs  typing.rs  views.rs
crates/liasse-host/: Cargo.toml
crates/liasse-host/src/: checked.rs  conform.rs  connector.rs  cose.rs  descriptor.rs  integrity.rs  lib.rs  namespace.rs  provider.rs  registry.rs  sim.rs  version.rs
crates/liasse-host/tests/: conformance.rs  connector.rs  cose.rs  identity.rs  provider.rs  redteam_offtype.rs  registry.rs
crates/liasse-ident/: Cargo.toml
crates/liasse-ident/src/: digest.rs  error.rs  escape.rs  identity.rs  key.rs  lib.rs  path.rs
crates/liasse-ident/tests/: digest.rs  identity.rs  key_text.rs  paths.rs
crates/liasse-key-ed25519/: Cargo.toml
crates/liasse-key-ed25519/src/: lib.rs  vault.rs
crates/liasse-key-ed25519/tests/: provider.rs  vault.rs
crates/liasse-model/: Cargo.toml
crates/liasse-model/benches/: model_bench.rs
crates/liasse-model/src/: auth.rs  blob.rs  bucket.rs  check.rs  config.rs  delete.rs  doc.rs  expose.rs  header.rs  history.rs  host.rs  infer.rs  keyring.rs  lib.rs  meter.rs  migration.rs  model.rs  module.rs  names.rs  refs.rs  report.rs  resolve.rs  scope.rs  seed.rs  state.rs  surface.rs  types.rs  walk.rs
crates/liasse-model/tests/: acceptance.rs  auth.rs  behavior.rs  blobs.rs  buckets.rs  computed_inference.rs  corpus_static.rs  deletion.rs  header_rejections.rs  history_migrations.rs  inline_programs.rs  keyrings.rs  meters.rs  modules.rs  nested_collection_ref_key.rs  redteam.rs  redteam_combinator_masks_unbounded_recurring.rs  redteam_composite_delete_operand_typing.rs  redteam_composite_in_typing.rs  redteam_composite_ref_compare_typing.rs  redteam_grouped_binding_qualified_leak.rs  redteam_optional_container_inner.rs  redteam_optional_map_key.rs  redteam_recursive_acyclicity.rs  redteam_recursive_coverage_field_static.rs  redteam_ref_unique_key.rs  redteam_role_view_purity.rs  redteam_size_over_unbounded_recurring.rs  redteam_struct_key_eligibility.rs  redteam_struct_nested_ref_gate_asymmetry.rs  redteam_struct_unique_candidate_key.rs  redteam_surface_view_purity.rs  state_rejections.rs  struct_key_selector_typing.rs  surface_declaration_pins.rs  unbounded_marker_propagation.rs
crates/liasse-pg/: Cargo.toml  DESIGN-live-views-pg.md  DESIGN-pure-pg.md
crates/liasse-pg/benches/: RESULTS.md  backend_vs_native_matrix.rs  backend_vs_raw.rs
crates/liasse-pg/design-prototype/: Dockerfile  demo-eval.sql  demo-subtree.sql  demo.sql  initdb.sql  lib.rs
crates/liasse-pg/src/: backend.rs  composite_key_enc_redteam.rs  factory.rs  jsonb_text.rs  key_enc.rs  key_enc_boundary_test.rs  key_enc_num.rs  key_enc_proptest.rs  lib.rs  node_load.rs  node_write.rs  projection.rs  read.rs  reconcile.rs  record_codec.rs  schema.rs  sort_enc.rs  store.rs  transition.rs  value_codec.rs
crates/liasse-pg/tests/: conformance.rs  corpus_scenarios_pg.rs  decimal_key_scale_divergence.rs  enum_placeholder_label_divergence.rs  huge_key_flattened.rs  index_coverage_pg.rs  node_tree_consistency.rs  nul_text_divergence.rs  reconcile_pg.rs  redteam_cascade_delete_orphan_reopen.rs  redteam_composite_tombstone_reopen.rs  redteam_from_scratch_deep_autocreate_reopen.rs  redteam_funding_and_sort_divergence_pg.rs  redteam_incarnation_burn_differential.rs  redteam_insert_under_tombstone_divergence.rs  redteam_mixed_type_scan_order.rs  redteam_nested_migration_dataloss_pg.rs  redteam_nested_without_ancestor.rs  redteam_nul_identity_divergence.rs  redteam_rekey_composite_ancestor_interleaved.rs  redteam_scan_subtree_shapes_differential.rs  redteam_set_of_ref_dropmember_reopen.rs  redteam_snapshot_frontier_differential.rs  redteam_staging_overlay_differential.rs  struct_key_divergence.rs  (+6 more)
crates/liasse-pred/: Cargo.toml
crates/liasse-runtime/: Cargo.toml
crates/liasse-store/: Cargo.toml
crates/liasse-surface/: Cargo.toml
crates/liasse-syntax/: Cargo.toml
crates/liasse-testkit/: Cargo.toml
crates/liasse-value/: Cargo.toml
crates/liasse-wire/: Cargo.toml
(+1624 files in other folders)
