[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.93"
repository = "https://github.com/Wicpar/liasse"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
indexing_slicing = "deny"

[workspace.dependencies]
# Shared dependency versions are pinned here as crates gain implementations.
# The synchronous connection pool serving `liasse-pg`'s `&self` reads (§5 of
# crates/liasse-pg/DESIGN-pure-pg.md): r2d2 is the mature, battle-tested sync pool
# manager, and r2d2_postgres 0.18 wraps exactly the workspace's blocking
# `postgres` 0.19 client — no async runtime, matching the sync `&mut` contract.
r2d2 = "0.8"
r2d2_postgres = "0.18"
