[package]
name = "liasse-expr"
description = "Typed expression model: type checking and evaluation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
liasse-diag = { path = "../liasse-diag" }
liasse-syntax = { path = "../liasse-syntax" }
# Canonical values, types, arithmetic newtypes, and the Annex B total order the
# evaluator sorts and compares with. `bigdecimal`/`num_bigint` are re-exported
# from here so exact `int`/`decimal` arithmetic shares the wire number types.
liasse-value = { path = "../liasse-value" }
# Annex D.2 canonical key text: a synthetic-`$key` group's stable row identity
# (§12.4) is its group key rendered through the one shared D.2 codec, never a
# hand-rolled spelling.
liasse-ident = { path = "../liasse-ident" }

[dev-dependencies]
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "expr_bench"
harness = false

[lints]
workspace = true
