[package]
name = "liasse-expr"
description = "Typed expression model: type checking and evaluation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
liasse-diag = { path = "../liasse-diag" }
liasse-syntax = { path = "../liasse-syntax" }
# Canonical values, types, arithmetic newtypes, and the Annex B total order the
# evaluator sorts and compares with. `bigdecimal`/`num_bigint` are re-exported
# from here so exact `int`/`decimal` arithmetic shares the wire number types.
liasse-value = { path = "../liasse-value" }
# Annex D.2 canonical key text: a synthetic-`$key` group's stable row identity
# (§12.4) is its group key rendered through the one shared D.2 codec, never a
# hand-rolled spelling.
liasse-ident = { path = "../liasse-ident" }
# The `eval-wire` codec (§7.3/§7.4 of `liasse-pg/DESIGN-pure-pg.md`): an internal,
# version-locked postcard wire over feature-gated serde derives on the checked
# typed tree. `serde_json` (arbitrary-precision) round-trips a `json`-typed literal
# through its canonical text. All three are pulled in only by the `eval-wire`
# feature — the default build never sees them, and they impose no public-format
# obligation (§7.4).
serde = { version = "1", features = ["derive"], optional = true }
postcard = { version = "1", features = ["use-std"], optional = true }
serde_json = { version = "1.0", features = ["arbitrary_precision"], optional = true }

[features]
# The postcard row-program wire and the hoisting boundary — enabled by `liasse-pred`
# and `liasse-runtime`, never by the default library build.
eval-wire = ["dep:serde", "dep:postcard", "dep:serde_json"]

[dev-dependencies]
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "expr_bench"
harness = false

[lints]
workspace = true
