[package]
name = "liasse-runtime"
description = "Admission, ordering, commits, history, and lifecycle semantics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
liasse-diag = { path = "../liasse-diag" }
liasse-syntax = { path = "../liasse-syntax" }
liasse-value = { path = "../liasse-value" }
liasse-ident = { path = "../liasse-ident" }
liasse-expr = { path = "../liasse-expr" }
liasse-model = { path = "../liasse-model" }
liasse-store = { path = "../liasse-store" }
liasse-host = { path = "../liasse-host" }
# §19 history: composing and opening `.liasse` artifacts, and the Annex E
# version-relationship decision (§20.3) the update/downgrade paths consume.
liasse-artifact = { path = "../liasse-artifact" }
# Strict-JSON wire values for decoding call arguments and `$data` seeds against
# their declared types via `liasse_value::Type::decode`; `arbitrary_precision`
# keeps big int/decimal inputs exact and matches the feature the value layer
# already enables so the workspace unifies to one serde_json build.
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
# §15 meters: exact decimal capacity/allocation arithmetic over the `decimal`
# values `liasse-value` wraps, using the same `BigDecimal` build.
bigdecimal = "0.4.10"
thiserror = "2"

[dev-dependencies]
liasse-store = { path = "../liasse-store" }
liasse-value = { path = "../liasse-value" }
liasse-ident = { path = "../liasse-ident" }
liasse-expr = { path = "../liasse-expr" }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "admission_bench"
harness = false

[lints]
workspace = true
