[package]
name = "liasse-surface"
description = "External surfaces, authentication, sessions, and live clients"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
liasse-diag = { path = "../liasse-diag" }
liasse-value = { path = "../liasse-value" }
liasse-expr = { path = "../liasse-expr" }
liasse-model = { path = "../liasse-model" }
liasse-store = { path = "../liasse-store" }
liasse-runtime = { path = "../liasse-runtime" }
liasse-host = { path = "../liasse-host" }
liasse-ident = { path = "../liasse-ident" }
thiserror = "2"

[lints]
workspace = true
