[package]
name = "liasse-surface"
description = "External surfaces, authentication, sessions, and live clients"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
liasse-diag = { path = "../liasse-diag" }
liasse-value = { path = "../liasse-value" }
liasse-expr = { path = "../liasse-expr" }
liasse-model = { path = "../liasse-model" }
liasse-store = { path = "../liasse-store" }
liasse-runtime = { path = "../liasse-runtime" }
liasse-host = { path = "../liasse-host" }
liasse-ident = { path = "../liasse-ident" }
thiserror = "2"

[dev-dependencies]
# The §12.2 patch applier the surface tests exercise lives once in liasse-wire;
# the tests reach it through the shared `support::apply_patch` adapter so there is
# a single source of truth for apply semantics.
liasse-wire = { path = "../liasse-wire" }
# The real Ed25519 §17.5 provider, exercised end-to-end through the de-hardwired
# `register_keyring` + `cose.sign`/`cose.verify` façade (§17.7/§17.8).
liasse-key-ed25519 = { path = "../liasse-key-ed25519" }

[lints]
workspace = true
