[package]
name = "liasse-syntax"
description = "Pest grammars and parsers for the Liasse authoring form and expression language"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
liasse-diag = { path = "../liasse-diag" }
# The project mandates pest (AGENTS.md). pest_derive compiles the two `.pest`
# grammars into typed `Rule` enums; pest gives byte-accurate spans we map onto
# `liasse_diag::ByteSpan`.
pest = "2.8"
pest_derive = "2.8"

[dev-dependencies]
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "parse_bench"
harness = false

[lints]
workspace = true
