[package]
name = "liasse-testkit"
description = "File-based conformance harness for the tests/ corpus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
deser-hjson = "2.2.6"
thiserror = "2.0.17"
walkdir = "2.5.0"
crc32fast = "1.5.0"
liasse-artifact = { path = "../liasse-artifact" }
liasse-value = { path = "../liasse-value" }
liasse-host = { path = "../liasse-host" }
liasse-ident = { path = "../liasse-ident" }
liasse-diag = { path = "../liasse-diag" }
liasse-syntax = { path = "../liasse-syntax" }
liasse-expr = { path = "../liasse-expr" }
liasse-model = { path = "../liasse-model" }
liasse-store = { path = "../liasse-store" }
liasse-runtime = { path = "../liasse-runtime" }
liasse-surface = { path = "../liasse-surface" }

[lints]
workspace = true
